<resources>
    <string name="app_name">Annapoorna</string>
    <string name="next">Next</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login">LOGIN</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="deliver_favourite_food">Deliver Favourite Food</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="sign_up_here" />
    <string name="sign_up_here2">Sign Up Here</string>
    <string name="e_mail_or_phone_number">E-mail or Phone Number</string>
    <string name="name">Name</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="or">OR</string>
    <string name="continue_with">Continue With</string>
    <string name="or1">OR</string>
    <string name="password1">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="create_account">Create Account</string>
    <string name="choose_location">Choose Location</string>
    <string name="Home" />
    <string name="Cart" />
    <string name="Search" />
    <string name="History" />
    <string name="Profile" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="enjoy_your_favourite_meal">Enjoy Your Favourite Meal</string>


    <string name="facebook_app_id">3073380729465550</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>



    <string name="Annapoorna" />
    <string name="FoodOrderApp" />
    <string name="search">Search</string>
    <string name="re_enter_password">Re-Enter Password</string>


</resources>