<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="89dp"
        android:layout_height="84dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainlogo" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/yeonsungregular"
        android:text="@string/waves_of_food"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/deliver_favourite_food"
        android:textAlignment="center"
        android:textColor="#36d482"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/latobold"
        android:text="@string/sign_up_here2"
        android:textAlignment="center"
        android:textColor="#36d482"
        android:textColorHighlight="#36d482"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/EmailAddress2"
        android:layout_width="363dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/mail_02"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/e_mail_or_phone_number"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="363dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/EmailAddress2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/EmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress2" />

    <EditText
        android:id="@+id/repeatPassword2"
        android:layout_width="363dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/or"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/repeatPassword2"
        app:layout_constraintStart_toStartOf="@+id/repeatPassword2"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword2" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/yeonsungregular"
        android:text="@string/sign_up_with"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googlebutton2"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/google_icon_2"
        android:fontFamily="@font/latoregular"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/facebookbutton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebookbutton2"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/facebook_3_1"
        android:fontFamily="@font/latoregular"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/googlebutton2"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createaccountbutton"
        android:layout_width="154dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/greenbutton"
        android:fontFamily="@font/latoregular"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/facebookbutton2"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/googlebutton2"
        app:layout_constraintTop_toBottomOf="@+id/googlebutton2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/createaccountbutton"
        app:layout_constraintEnd_toEndOf="@+id/createaccountbutton"
        app:layout_constraintStart_toStartOf="@+id/createaccountbutton"
        app:layout_constraintTop_toTopOf="@+id/createaccountbutton" />

    <TextView
        android:id="@+id/alreadybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/yeonsungregular"
        android:text="@string/already_have_an_account"
        android:textColor="#36d482"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/createaccountbutton"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/createaccountbutton"
        app:layout_constraintTop_toBottomOf="@+id/createaccountbutton" />

    <ImageView
        android:id="@+id/eyepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="322dp"
        android:layout_marginEnd="18dp"
        android:elevation="6dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/eye_off" />

    <ImageView
        android:id="@+id/eyerepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="322dp"
        android:layout_marginEnd="17dp"
        android:elevation="6dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/repeatPassword2"
        app:layout_constraintEnd_toEndOf="@+id/repeatPassword2"
        app:layout_constraintStart_toStartOf="@+id/repeatPassword2"
        app:layout_constraintTop_toTopOf="@+id/repeatPassword2"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/eye_off" />


</androidx.constraintlayout.widget.ConstraintLayout>